# term

./: .gitignore  .pre-commit-config.yaml  .pypirc.example  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  SCRIPTING.md  browser.py  dev.py  pyproject.toml  render.py  requirements.txt  roadmap.txt  setup.py  term.py  term2doc.py  util.py  window.py
local/: welcome.term
piko/: __init__.py  adom.py  app.py  browser.py  config.py  input_handler.py  pieces.py  renderer.py  util.py  vector.py  window.py
piko/adom/: __init__.py  constants.py  document.py  elements.py  parsers.py  utils.py
piko/local/: welcome.xml
piko/rendering/: border_util.py  borders.py  element_util.py  render.py  style.py  style_constants.py  text_util.py  util.py
pikobrowser/: __init__.py  __main__.py
termbrowser/: __init__.py  adom.py  app.py  browser.py  config.py  input_handler.py  pieces.py  render.py  renderer.py  term.py  term2doc.py  util.py  vector.py  window.py
termbrowser/adom/: __init__.py  constants.py  document.py  elements.py  parsers.py
termbrowser/local/: settings.term  welcome.term  welcome.xml
termbrowser/rendering/: border_util.py  borders.py  element_util.py  render.py  style.py  text_util.py
termbrowser/termnet/: search.term  termnet.py
termnet/: termnet.py
